# HttpServer

./: CMakeLists.txt  README.txt
libcurl/lib/: libcurl.la  libcurl.so.4.6.0
libcurl/lib/pkgconfig/: libcurl.pc
libcurl/share/man/man3/: libcurl-symbols.3
libevent/include/event2/: event-config.h
libevent/lib/: libevent-2.2.so.1.0.0  libevent_core-2.2.so.1.0.0  libevent_extra-2.2.so.1.0.0  libevent_mbedtls-2.2.so.1.0.0  libevent_openssl-2.2.so.1.0.0  libevent_pthreads-2.2.so.1.0.0
libevent/lib/cmake/libevent/: LibeventConfig.cmake  LibeventTargets-shared-release.cmake  LibeventTargets-shared.cmake  LibeventTargets-static-release.cmake  LibeventTargets-static.cmake
libevent/lib/pkgconfig/: libevent.pc  libevent_core.pc  libevent_extra.pc  libevent_mbedtls.pc  libevent_openssl.pc  libevent_pthreads.pc
libopencv/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake
src/: HttpServer.cpp  HttpServer.hpp  json.h  main.cpp
